# proofyard

./: .env.example  .gitignore  .gitleaks.toml  .npmrc  .secrets.baseline  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISTRIBUTION.md  INTEGRATIONS.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  docker-compose.yml  index.html  justfile  llms-install.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.json  turbo.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  codeql.yml  desktop-smoke.yml  manual.yml  nightly.yml  pr.yml  pre-commit.yml  release-candidate.yml  runtime-gc.yml  upstream-drift-audit.yml
ISSUE_TEMPLATE/: feature_request.yml
apps/: AGENTS.md  CLAUDE.md  __init__.py
apps/api/: AGENTS.md  CLAUDE.md  Dockerfile  __init__.py  alembic.ini
apps/automation-runner/: AGENTS.md  CLAUDE.md  README.md  eslint.config.mjs  package.json  playwright.config.ts  tsconfig.json
apps/mcp-server/: Dockerfile  README.md  package.json  server.json  tsconfig.build.json  tsconfig.json
apps/web/: AGENTS.md  CLAUDE.md  Dockerfile  components.json  eslint.config.js  index.html  nginx.conf  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.ts
configs/: danger-action-policy.yaml  security-rules.yaml
configs/ai/: provider-policy.yaml
configs/ci/: biome.json  runtime.lock.json  (+2 more)
contracts/: true-green-manifest.schema.json
docs/: README.md  architecture.md  cli.md  index.md  quality-gates.md
scripts/: audit-tooling.mjs  automation-lifecycle.sh  backup-runtime.sh  check-db-migrations.sh  check-e2e-contract.mjs  check-openapi-coverage.ts  check-openapi-doc-contract.py  check-worktree-hygiene.sh  dev-down.sh  dev-menu.sh  dev-status.sh  dev-up.sh  docs-gate.sh  driver-smoke-doctor.sh  gates-profile.sh  git-sync-audit.sh  install-hooks.sh  orchestrate-from-artifacts.sh  preflight.sh  release-gate.sh  rollback-runtime.sh  run-contract-scan.sh  run-e2e.sh  run-frontend-e2e-nonstub.sh  run-load-k6-smoke.sh  run-load-k6.sh  run-matrix.sh  run-perfect-pipeline.sh  run-pipeline.sh  run-schemathesis-safe.sh  run-tauri-smoke-local.sh  run-ts-mutation.sh  run-uiq-shared-runtime.sh  runtime-gc.sh  security-scan.sh  setup.sh  space-clean-reclaim.py  space-clean-safe.py  space-report.py  start-all.sh  (+10 more)
(+755 files in other folders)
